--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Great USDT Ton Crypto Investments</title>
+    <title>LIGHTS Investments</title>
     <link rel="stylesheet" href="/front-end/css_files/style2.css">
     <script defer src="scripts.js"></script>
 
